Fixed the row being too long and causing horizontal scroll bar

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -147,6 +147,10 @@ marquee {
   font-weight: 300;
   font-size: 2em;
 
+  .row {
+    width: 100%;
+  }
+
   #colorstrip {
     width: 100%;
     height: 60px;
